<?xml version="1.0" encoding="utf-8"?>
<eu.stosdev.theresistance.view.TeamVoteProgressView xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent">


    <RelativeLayout
        android:id="@+id/bla_container"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_alignParentBottom="true"
        android:layout_margin="16dp"
        android:visibility="gone">

        <LinearLayout
            android:id="@+id/vote_bar"
            style="?android:attr/buttonBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:gravity="end"
            android:visibility="invisible">

            <Button
                android:id="@+id/null_button"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/null_vote"/>

            <Button
                android:id="@+id/approve_button"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/approve_vote"/>
        </LinearLayout>

        <TextView
            android:id="@+id/nullified_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="16dp"
            android:textSize="14sp"
            tools:text="@string/nullified"/>
    </RelativeLayout>

    <ListView
        android:id="@+id/team_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/bla_container"
        android:layout_alignParentTop="true"/>
</eu.stosdev.theresistance.view.TeamVoteProgressView>