<?xml version="1.0" encoding="utf-8"?>
<eu.stosdev.theresistance.view.MissionResultView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center">

    <RelativeLayout
        android:layout_width="250dp"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/mission_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginStart="30dp"
            android:text="@string/mission_semicolon"/>

        <TextView
            android:id="@+id/mission_status"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/mission_label"
            android:gravity="center"
            android:textSize="50sp"
            tools:text="SUCCESS"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/mission_status"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <RelativeLayout
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp">

                <TextView
                    android:id="@+id/for_votes"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textSize="40sp"
                    tools:text="10"/>

                <TextView
                    android:id="@+id/for_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/for_votes"
                    android:gravity="center"
                    android:text="@string/FOR"
                    android:textSize="20sp"/>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp">

                <TextView
                    android:id="@+id/against_votes"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textSize="40sp"
                    tools:text="10"/>

                <TextView
                    android:id="@+id/against_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/against_votes"
                    android:gravity="center"
                    android:text="@string/AGAINST"
                    android:textSize="20sp"/>
            </RelativeLayout>
        </LinearLayout>
    </RelativeLayout>
</eu.stosdev.theresistance.view.MissionResultView>